light mode example not visible fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -186,7 +186,7 @@ pre {
   margin-right: 5px;
 }
 
-body.light #output {
+body.light pre {
   background-color: white;
   color: black;
   border: 1px solid #334155;
